# gorkd

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
crates/gorkd-api/: Cargo.toml
crates/gorkd-api/src/: dto.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/gorkd-api/src/routes/: health.rs  jobs.rs  mod.rs  research.rs
crates/gorkd-api/tests/: integration.rs
crates/gorkd-bot-discord/: Cargo.toml
crates/gorkd-bot-discord/src/: main.rs
crates/gorkd-bot-slack/: Cargo.toml
crates/gorkd-bot-slack/src/: main.rs
crates/gorkd-core/: Cargo.toml
crates/gorkd-core/src/: answer.rs  error.rs  id.rs  job.rs  lib.rs  query.rs  search.rs  source.rs
crates/gorkd-core/src/mock/: llm.rs  mod.rs  search.rs  store.rs
crates/gorkd-core/src/pipeline/: executor.rs  mod.rs  planner.rs  synthesizer.rs
crates/gorkd-core/src/traits/: errors.rs  llm.rs  mod.rs  search.rs  store.rs
crates/gorkd-llm/: Cargo.toml
crates/gorkd-llm/src/: client.rs  config.rs  error.rs  lib.rs  prompt.rs  registry.rs  types.rs
crates/gorkd-llm/src/anthropic/: client.rs  mod.rs  parser.rs  types.rs
crates/gorkd-llm/src/openai/: client.rs  mod.rs  parser.rs  types.rs
crates/gorkd-llm/tests/: integration.rs
crates/gorkd-llm/tests/fixtures/: mod.rs
crates/gorkd-search/: Cargo.toml
crates/gorkd-search/src/: client.rs  config.rs  exa.rs  fallback.rs  lib.rs  registry.rs  searxng.rs  tavily.rs
crates/gorkd-store/: Cargo.toml
crates/gorkd-store/src/: lib.rs
docs/: README.md  vision.md
docs/architecture/: overview.md  research-pipeline.md
docs/decisions/: 0001-adr-process.md  template.md
docs/impl-plan/discord-bot/: 00-overview.md  01-shared-infrastructure.md  02-event-handlers.md  03-research-flow.md  04-rich-responses.md  05-rate-limiting.md
docs/impl-plan/llm-providers/: 00-overview.md  01-shared-infrastructure.md  02-anthropic-provider.md  03-openai-provider.md  04-provider-registry.md  05-integration-testing.md
docs/impl-plan/project-scaffolding/: 00-overview.md  01-workspace-setup.md  02-core-domain-types.md  03-provider-traits.md  04-api-skeleton.md  05-integration-test.md
docs/impl-plan/search-providers/: 00-overview.md  01-shared-infrastructure.md  02-tavily-provider.md  03-exa-provider.md  04-searxng-provider.md  05-integration-testing.md
docs/impl-plan/web-ui/: 00-overview.md  01-project-scaffolding.md  02-api-client-types.md  03-core-layout.md  04-query-flow.md  05-sse-streaming.md  06-results-display.md  07-polish-testing.md
docs/interfaces/: discord.md  http-api.md  slack.md
web/: .env.example  .prettierignore  .prettierrc  eslint.config.js  package.json  vite.config.ts
web/src/: app.css
web/src/lib/api/: client.test.ts  client.ts  errors.ts  index.ts  stream.ts  types.ts
web/src/lib/components/: AnswerCard.svelte  AnswerSkeleton.svelte  ApiStatusBanner.svelte  Button.svelte  Button.test.ts  Card.svelte  CitationLink.svelte  ConfidenceBadge.svelte  EmptyState.svelte  ErrorState.svelte  ErrorState.test.ts  ExampleQueries.svelte  Icon.svelte  Input.svelte  LimitationsList.svelte  Logo.svelte  MetadataBar.svelte  NewQueryButton.svelte  ProgressStages.svelte  QueryInput.svelte  QueryInput.test.ts  ShareButton.svelte  Skeleton.svelte  SourceCard.svelte  SourcePreview.svelte  SourceSkeleton.svelte  SourcesPanel.svelte  Spinner.svelte  StreamingIndicator.svelte  ThemeToggle.svelte  index.ts
web/src/lib/stores/: health.svelte.ts  research.svelte.ts  theme.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/research/[id]/: +page.svelte  +page.ts
web/src/tests/: skeletons.test.ts
