[workspace]
resolver = "2"
members = [
    "crates/gorkd-core",
    "crates/gorkd-api",
    "crates/gorkd-search",
    "crates/gorkd-llm",
    "crates/gorkd-store",
    "crates/gorkd-bot-discord",
    "crates/gorkd-bot-slack",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dollan/gorkd"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# HTTP
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Retry
backoff = { version = "0.4", features = ["tokio"] }

# UUID / ID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
nanoid = "0.4"

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model"] }

# Slack
slack-morphism = { version = "2.5", features = ["hyper"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Internal crates
gorkd-core = { path = "crates/gorkd-core" }
gorkd-search = { path = "crates/gorkd-search" }
gorkd-llm = { path = "crates/gorkd-llm" }
gorkd-store = { path = "crates/gorkd-store" }
