[package]
name = "gorkd-api"
description = "HTTP API server for gorkd research bot"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "gorkd-api"
path = "src/main.rs"

[dependencies]
# Internal
gorkd-core.workspace = true
gorkd-search.workspace = true
gorkd-llm.workspace = true
gorkd-store.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

[dev-dependencies]
