[package]
name = "gorkd-api"
description = "HTTP API server for gorkd research bot"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "gorkd_api"
path = "src/lib.rs"

[[bin]]
name = "gorkd-api"
path = "src/main.rs"

[dependencies]
gorkd-core.workspace = true
gorkd-search.workspace = true

axum.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-stream.workspace = true
futures.workspace = true
tower.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

thiserror.workspace = true
chrono.workspace = true

[features]
integration = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
axum-test = "18"
serde_json.workspace = true
