[package]
name = "gorkd-bot-discord"
description = "Discord bot adapter for gorkd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "gorkd-bot-discord"
path = "src/main.rs"

[dependencies]
# Internal
gorkd-core.workspace = true

# Discord
serenity.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
