[package]
name = "gorkd-search"
description = "Search provider implementations for gorkd (Tavily, Exa, SearXNG)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
gorkd-core.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# URL handling
url = "2.5"

[features]
integration = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
